fixed file paths

--- a/assets/index.html
+++ b/assets/index.html
@@ -7,10 +7,9 @@
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
- <script src="node_modules/phaser/dist/phaser.min.js"></script>
-<audio id="room-music" src="/assets/sid/current_room.wav" loop autoplay></audio>
- <script src="/assets/game.js?v=<?=time();?>"></script>
- <script src="server.js?v=<?=time();?>"></script>
+ <script src="/node_modules/phaser/dist/phaser.min.js"></script>
+<audio id="room-music" src="/sid/current_room.wav" loop autoplay></audio>
+ <script src="/assets/game.js"></script>
    <script>
    
    // Enhanced playRoomMusic with status feedback
